--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <footer>
             <p>&copy;The Editors of Encyclopaedia Britannica</p>
             <p>This article was most recently revised and updated by Alicja Zelazko.</p>
+            <p>Write by Ahmad Kurniawan Ibrahim<p>
         </footer>
   </body>
 </html>
